--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
+    "chai": "^6.0.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^11.7.2",
+    "sinon": "^21.0.0",
+    "supertest": "^7.1.4",
     "swagger-ui-express": "^5.0.1"
   }
 }
