--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "sinon": "^21.0.0",
     "supertest": "^7.1.4",
     "swagger-ui-express": "^5.0.1"
-  }
+  },
+
+  "scripts": {
+  "test": "mocha test/**/*.test.js"
 }
+
+}
+
