--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
     "jsonwebtoken": "^9.0.2",
     "mocha": "^11.7.2",
     "sinon": "^21.0.0",
+    "soap": "^1.4.1",
     "supertest": "^7.1.4",
     "swagger-ui-express": "^5.0.1"
   },
-
   "scripts": {
   "test": "mocha test/**/*.test.js"
+  }
 }
-
-}
-
