--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "type": "module",
   "dependencies": {
+  "chai": "^6.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^11.7.2",
@@ -9,7 +11,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "scripts": {
-    "test": "mocha test/**/*.test.js"
+  "test": "mocha test/**/*.test.mjs --timeout 10000 --exit"
   },
   "devDependencies": {
     "chai": "^6.2.0"
